src/test/test-models/bad/real_idx.stan
transformed data {
  real a[10];
  a[1.0] = 5;
}
model {
}
